# moodify

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: app.py
app/logic/: config.py  loader.py  predictor.py
app/static/css/: styles.css
app/static/js/: autocomplete.js
app/templates/: index.html
notebooks/: 02_mood_labels_creation.ipynb  03_model_training.ipynb
